2003-02-18  David Hyatt  <hyatt@apple.com>

	Fix for 3171795, dotted borders drawn incorrectly.  Picked this
	gem up from the KHTML trunk.
	
        Reviewed by darin

        * khtml/rendering/render_object.cpp:
        (RenderObject::drawBorder):

2003-02-17  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed 3174332 -- REGRESSION: bad initial layout due to empty QFontMetrics

        * khtml/rendering/render_html.cpp: (RenderHtml::setStyle):
        Don't set the style's to display:BLOCK if it's display:NONE. This prevents
        us from modifying the special FOUC style among other things.

        - unrelated code cleanup

        * khtml/html/html_baseimpl.cpp: Moved code around that was grouped badly.

2003-02-17  David Hyatt  <hyatt@apple.com>

	Missed another "Almost Strict" spot.
	
        Reviewed by kocienda

        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::recalcStyle):

2003-02-17  David Hyatt  <hyatt@apple.com>

	Fix for 3% improvement on cached cvs-base.  Make cells share the
	declarations set up by the table (add these decls to the table
	once instead of to every cell).
	
        Reviewed by darin

        * khtml/css/cssstyleselector.cpp:
        * khtml/css/cssstyleselector.h:
        * khtml/html/html_tableimpl.cpp:
        (HTMLTableElementImpl::HTMLTableElementImpl):
        (HTMLTableElementImpl::~HTMLTableElementImpl):
        (HTMLTableElementImpl::createSharedCellDecls):
        (HTMLTableCellElementImpl::getAdditionalStyleDecls):
        (HTMLTableCellElementImpl::attach):
        * khtml/html/html_tableimpl.h:
        * khtml/xml/dom_elementimpl.h:

2003-02-17  Trey Matteson  <trey@apple.com>

	2938062 Mouse cursor does not change to link cursor over non-button form submission controls
	
        Reviewed by Darin

        * khtml/khtmlview.cpp:
        (isSubmitImage):  Helper function to ID submit buttons with images.